Add docs for rolling content views
Refs PR 11240 in katello on GitHub
Refs 38048 in Redmine

--- a/guides/common/assembly_managing-content-views.adoc
+++ b/guides/common/assembly_managing-content-views.adoc
@@ -16,6 +16,10 @@ include::modules/proc_viewing-module-streams.adoc[leveloffset=+1]
 
 include::modules/proc_promoting-a-content-view.adoc[leveloffset=+1]
 
+include::modules/con_rolling-content-views.adoc[leveloffset=+1]
+
+include::modules/proc_creating-a-rolling-content-view.adoc[leveloffset=+1]
+
 include::modules/con_composite-content-views-overview.adoc[leveloffset=+1]
 
 include::modules/proc_creating-a-composite-content-view.adoc[leveloffset=+1]
