Publish Administering Foreman for all flavours
* Estimate disk usage for backups is Katello-only
* Backups without Pulp are Katello-only
* Hide Pulp database for Foreman because it's Katello-only
* Do not sync content to Smart Proxy Servers for Foreman
  Content on Smart Proxy Servers is Katello-only.
* Hide Katello-specific events for Foreman
* Hide Pulp for non-Katello
* Hide Pulp mirror for Foreman
* Show content and content settings for Katello only

closes 676

--- a/guides/common/assembly_administer-settings-information.adoc
+++ b/guides/common/assembly_administer-settings-information.adoc
@@ -14,7 +14,9 @@ ifdef::satellite,orcharhino[]
 include::modules/ref_redhat-cloud-settings.adoc[leveloffset=+1]
 endif::[]
 
+ifdef::katello,satellite,orcharhino[]
 include::modules/ref_content-settings.adoc[leveloffset=+1]
+endif::[]
 
 include::modules/ref_authentication-settings.adoc[leveloffset=+1]
 
