--- a/guides/common/assembly_backing-up-server-and-proxy.adoc
+++ b/guides/common/assembly_backing-up-server-and-proxy.adoc
@@ -1,10 +1,14 @@
 include::modules/con_backing-up-server-and-proxy.adoc[]
 
+ifdef::katello,orcharhino,satellite[]
 include::modules/proc_estimating-the-size-of-a-backup.adoc[leveloffset=+1]
+endif::[]
 
 include::modules/proc_performing-a-full-backup.adoc[leveloffset=+1]
 
+ifdef::katello,orcharhino,satellite[]
 include::modules/proc_performing-a-backup-without-pulp-content.adoc[leveloffset=+1]
+endif::[]
 
 include::modules/proc_performing-an-incremental-backup.adoc[leveloffset=+1]
 
