--- a/guides/common/assembly_restoring-server-or-smart-proxy-from-a-backup.adoc
+++ b/guides/common/assembly_restoring-server-or-smart-proxy-from-a-backup.adoc
@@ -6,4 +6,6 @@ include::modules/proc_restoring-from-incremental-backups.adoc[leveloffset=+1]
 
 include::modules/con_backup-and-restore-smartproxyserver-by-using-a-virtual-machine-snapshot.adoc[leveloffset=+1]
 
+ifdef::katello,orcharhino,satellite[]
 include::modules/proc_synchronizing-content-from-project-server-to-smart-proxy-servers.adoc[leveloffset=+2]
+endif::[]
