--- a/guides/common/modules/con_maintaining-server.adoc
+++ b/guides/common/modules/con_maintaining-server.adoc
@@ -1,4 +1,10 @@
 [id="maintaining-{project-context}-server_{context}"]
 = Maintaining {ProjectServer}
 
-This chapter provides information on how to maintain a {ProjectServer}, including information on how to work with audit records, how to clean unused tasks, and how to recover Pulp from a full disk.
+This chapter provides information on how to maintain {ProjectServer}, including information on
+ifdef::katello,orcharhino,satellite[]
+how to recover Pulp from a full disk, how to work with audit records, and how to clean unused tasks.
+endif::[]
+ifdef::foreman-el,foreman-deb[]
+how to work with audit records and how to clean unused tasks.
+endif::[]
