--- a/guides/common/modules/proc_managing-tasks.adoc
+++ b/guides/common/modules/proc_managing-tasks.adoc
@@ -23,6 +23,7 @@ Adjusting the _%_finish_timeout_ values might help in case of low bandwidth.
 Adjusting the _%_accept_timeout_ values might help in case of high latency.
 ====
 
+ifdef::katello,orcharhino,satellite[]
 When a task is initialized, any back-end service that will be used in the task, such as Candlepin or Pulp, will be checked for correct functioning.
 If the check fails, you will receive an error similar to the following one:
 
@@ -32,6 +33,7 @@ There was an issue with the backend service candlepin: Connection refused – co
 ----
 
 If the back-end service checking feature turns out to be causing any trouble, it can be disabled as follows.
+endif::[]
 
 .To disable checking for services
 . In the {ProjectWebUI}, navigate to *Administer* > *Settings*.
