--- a/guides/common/modules/proc_performing-an-incremental-backup.adoc
+++ b/guides/common/modules/proc_performing-an-incremental-backup.adoc
@@ -14,7 +14,9 @@ Ensure no other tasks are scheduled for the same time as the backup.
 
 .Prerequisites
 * Ensure that your backup location has sufficient available disk space to store the backup.
+ifdef::katello,orcharhino,satellite[]
 For more information, see xref:Estimating_the_Size_of_a_Backup_{context}[].
+endif::[]
 
 .Procedure
 . To perform a full offline backup, enter the following command:
