--- a/guides/common/modules/proc_performing-an-online-backup.adoc
+++ b/guides/common/modules/proc_performing-an-online-backup.adoc
@@ -3,9 +3,11 @@
 
 Perform an online backup only for debugging purposes.
 
+ifdef::katello,orcharhino,satellite[]
 .Risks associated with online backups
 When performing an online backup, if there are procedures affecting the Pulp database, the Pulp part of the backup procedure repeats until it is no longer being altered.
 Because the backup of the Pulp database is the most time consuming part of backing up {Project}, if you make a change that alters the Pulp database during this time, the backup procedure keeps restarting.
+endif::[]
 
 For production environments, use the offline method.
 For more information, see xref:Performing_a_Full_Backup_{context}[].
@@ -19,7 +21,9 @@ Ensure no other tasks are scheduled for the same time as the backup.
 
 .Prerequisites
 * Ensure that your backup location has sufficient available disk space to store the backup.
+ifdef::katello,orcharhino,satellite[]
 For more information, see xref:Estimating_the_Size_of_a_Backup_{context}[].
+endif::[]
 
 .Procedure
 * To perform an online backup, enter the following command:
