--- a/guides/common/modules/proc_viewing-general-smart-proxy-information.adoc
+++ b/guides/common/modules/proc_viewing-general-smart-proxy-information.adoc
@@ -7,7 +7,13 @@ The information contained in the table answers the following questions:
 *Is {SmartProxyServer} running?*:: This is indicated by a green icon in the *Status* column.
 A red icon indicates an inactive {SmartProxy}, use the `service foreman-proxy restart` command on {SmartProxyServer} to activate it.
 
-*What services are enabled on {SmartProxyServer}?*:: In the *Features* column you can verify if {SmartProxy} for example provides a DHCP service or acts as a Pulp mirror.
+*What services are enabled on {SmartProxyServer}?*::
+ifdef::katello,orcharhino,satellite[]
+In the *Features* column, you can verify if, for example, your {SmartProxy} provides a DHCP service or acts as a Pulp mirror.
+endif::[]
+ifdef::foreman-el,foreman-deb[]
+In the *Features* column, you can verify if, for example, your {SmartProxy} provides a DHCP service.
+endif::[]
 {SmartProxy} features can be enabled during installation or configured in addition.
 For more information, see {InstallingSmartProxyDocURL}[Installing {SmartProxyServer}].
 
