--- a/guides/common/modules/ref_email-notification-types.adoc
+++ b/guides/common/modules/ref_email-notification-types.adoc
@@ -8,21 +8,29 @@ ifdef::satellite[]
 {SmartProxy} sync failure:: A notification sent after {SmartProxy} synchronization fails.
 endif::[]
 Compliance policy summary:: A summary of OpenSCAP policy reports and their results.
+ifdef::katello,orcharhino,satellite[]
 Content view promote failure:: A notification sent after content view promotion fails.
 Content view publish failure:: A notification sent after content view publication fails.
+endif::[]
 Host built:: A notification sent after a host is built.
+ifdef::katello,orcharhino,satellite[]
 Host errata advisory:: A summary of applicable and installable errata for hosts managed by the user.
+endif::[]
 ifdef::orcharhino[]
 {SmartProxy} sync failure:: A notification sent after {SmartProxy} synchronization fails.
 endif::[]
+ifdef::katello,orcharhino,satellite[]
 Promote errata:: A notification sent only after a content view promotion.
 It contains a summary of errata applicable and installable to hosts registered to the promoted content view.
 This allows a user to monitor what updates have been applied to which hosts.
 Repository sync failure:: A notification sent after repository synchronization fails.
-ifdef::foreman-el,foreman-deb,katello[]
+endif::[]
+ifdef::katello[]
 {SmartProxy} sync failure:: A notification sent after {SmartProxy} synchronization fails.
 endif::[]
+ifdef::katello,orcharhino,satellite[]
 Sync errata:: A notification sent only after synchronizing a repository.
 It contains a summary of new errata introduced by the synchronization.
+endif::[]
 
 For a complete list of email notification types, navigate to *Administer* > *Users* in the {ProjectWebUI}, click the *Username* of the required user, and select the *Email Preferences* tab.
