--- a/guides/common/modules/con_backup-and-restore-smartproxyserver-by-using-a-virtual-machine-snapshot.adoc
+++ b/guides/common/modules/con_backup-and-restore-smartproxyserver-by-using-a-virtual-machine-snapshot.adoc
@@ -3,9 +3,16 @@
 
 If your {SmartProxyServer} is a virtual machine, you can restore it from a snapshot.
 Creating weekly snapshots to restore from is recommended.
+ifdef::katello,orcharhino,satellite[]
 In the event of failure, you can install, or configure a new {SmartProxyServer}, and then synchronize the database content from {ProjectServer}.
+endif::[]
+ifdef::foreman-el,foreman-deb[]
+In the event of failure, you can install or configure a new {SmartProxyServer}.
+endif::[]
 
 If required, deploy a new {SmartProxyServer}, ensuring the host name is the same as before, and then install the {SmartProxy} certificates.
 You may still have them on {ProjectServer}, the package name ends in -certs.tar, alternately create new ones.
 Follow the procedures in {InstallingSmartProxyDocURL}[Installing {SmartProxyServer}] until you can confirm, in the {ProjectWebUI}, that {SmartProxyServer} is connected to {ProjectServer}.
+ifdef::katello,orcharhino,satellite[]
 Then use the procedure xref:Synchronizing_Content_from_{project-context}_Server_to_{smart-proxy-context-titlecase}_Servers_{context}[] to synchronize from {Project}.
+endif::[]
