--- a/guides/common/modules/proc_monitoring-services.adoc
+++ b/guides/common/modules/proc_monitoring-services.adoc
@@ -2,7 +2,13 @@
 = Monitoring services
 
 In the {ProjectWebUI}, navigate to *Infrastructure* > *{SmartProxies}* and click the name of the selected {SmartProxy}.
-At the *Services* tab, you can find basic information on {SmartProxy} services, such as the list of DNS domains, or the number of Pulp workers.
+At the *Services* tab, you can find basic information on {SmartProxy} services,
+ifdef::katello,orcharhino,satellite[]
+such as the list of DNS domains, or the number of Pulp workers.
+endif::[]
+ifdef::foreman-el,foreman-deb[]
+for example, the list of DNS domains.
+endif::[]
 The appearance of the page depends on what services are enabled on {SmartProxyServer}.
 Services providing more detailed status information can have dedicated tabs at the {SmartProxy} page.
 For more information, see xref:Monitoring_Puppet_{context}[].
