--- a/guides/common/modules/proc_performing-a-full-backup.adoc
+++ b/guides/common/modules/proc_performing-a-full-backup.adoc
@@ -59,7 +59,9 @@ endif::[]
 
 .Prerequisites
 * Ensure that your backup location has sufficient available disk space to store the backup.
+ifdef::katello,orcharhino,satellite[]
 For more information, see xref:Estimating_the_Size_of_a_Backup_{context}[].
+endif::[]
 
 [WARNING]
 ====
